--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Название сайта</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./main.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Калькулятор стоимости заказа</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-<div class="cont">
-    <div class="col-start-2 lg:col-start-3 col-span-4 lg:col-span-2 flex flex-col">
-        <form class="flex flex-col">
-            <label class="text-center flex flex-col">
-                 Количество
-                 <input id="quantityInput" class="px-1 my-1" type="number"/>
-            </label>
-            <label class="flex flex-col items-center">
-                <select id="select">
-                    <option value="product1">Товар1</option>
-                    <option value="product2">Товар2</option>
-                    <option value="product3">Товар3</option>
-                </select>
-            </label>
+    <div class="container">
+        <h1>Калькулятор стоимости заказа</h1>
+        <form id="orderForm">
+            <label for="quantity">Количество товара:</label>
+            <input type="number" id="quantity" name="quantity" required>
+            <br><br>
+
+            <label for="product">Выберите товар:</label>
+            <select id="product" name="product">
+                <option value="99">Чизбургер (99 руб)</option>
+                <option value="60">Вода (60 руб)</option>
+                <option value="90">Картофель фри (90 руб)</option>
+            </select>
+            <br><br>
+
+            <button type="button" id="calculateBtn">Подсчитать стоимость</button>
         </form>
-        <button id="calculate">Рассчитать</button>
-        <div id="answerDiv" class="px-5 text-center bg-orange-200"></div>
+
+        <div id="result"></div>
     </div>
-</div>
 </body>
 </html>
